--- a/scraper/package.json
+++ b/scraper/package.json
@@ -9,6 +9,10 @@
   "author": "Stanley Egbe",
   "license": "ISC",
   "dependencies": {
-    "twit": "^2.2.11"
+    "dotenv": "^16.0.3",
+    "needle": "^3.1.0",
+    "twit": "^2.2.11",
+    "twitter-api-sdk": "^1.2.1",
+    "twitter-api-v2": "^1.12.9"
   }
 }
